--- a/Plastikama Technology Industry/page-testimonial.html
+++ b/Plastikama Technology Industry/page-testimonial.html
@@ -62,7 +62,7 @@
               <div class="wrap-inner clearfix">
                 <div id="site-logo" class="clearfix">
                   <div id="site-log-inner">
-                    <a href="home.html" rel="home" class="main-logo">
+                    <a href="index.html" rel="home" class="main-logo">
                       <img
                         src="assets/img/logo-small.png"
                         alt="Autora"
@@ -85,7 +85,7 @@
                 <nav id="main-nav" class="main-nav">
                   <ul id="menu-primary-menu" class="menu">
                     <li class="menu-item menu-item-has-children">
-                      <a href="home.html">HOME</a>
+                      <a href="index.html">HOME</a>
                     </li>
                     <li class="menu-item menu-item-has-children">
                       <a href="page-about.html">ABOUT US </a>
@@ -177,7 +177,7 @@
               <div id="breadcrumbs">
                 <div class="breadcrumbs-inner">
                   <div class="breadcrumb-trail">
-                    <a href="home.html" class="trail-begin">Home</a>
+                    <a href="index.html" class="trail-begin">Home</a>
                     <span class="sep">|</span>
                     <a href="page-testimonial.html" class="trail-begin">Page</a>
                     <span class="sep">|</span>
