--- a/Plastikama Technology Industry/page-about-careers.html
+++ b/Plastikama Technology Industry/page-about-careers.html
@@ -60,7 +60,7 @@
               <div class="wrap-inner clearfix">
                 <div id="site-logo" class="clearfix">
                   <div id="site-log-inner">
-                    <a href="home.html" rel="home" class="main-logo">
+                    <a href="index.html" rel="home" class="main-logo">
                       <img
                         src="assets/img/logo-small.png"
                         alt="Autora"
@@ -83,10 +83,10 @@
                 <nav id="main-nav" class="main-nav">
                   <ul id="menu-primary-menu" class="menu">
                     <li class="menu-item menu-item-has-children">
-                      <a href="home.html">HOME</a>
+                      <a href="index.html">HOME</a>
                       <ul class="sub-menu">
                         <li class="menu-item">
-                          <a href="home.html">HOME 1</a>
+                          <a href="index.html">HOME 1</a>
                         </li>
                         <li class="menu-item">
                           <a href="home-2.html">HOME 2</a>
@@ -223,7 +223,7 @@
               <div id="breadcrumbs">
                 <div class="breadcrumbs-inner">
                   <div class="breadcrumb-trail">
-                    <a href="home.html" class="trail-begin">Home</a>
+                    <a href="index.html" class="trail-begin">Home</a>
                     <span class="sep">|</span>
                     <a href="page-about.html" class="trail-begin">About us </a>
                     <span class="sep">|</span>
