--- a/Plastikama Technology Industry/page-about.html
+++ b/Plastikama Technology Industry/page-about.html
@@ -62,7 +62,7 @@
               <div class="wrap-inner clearfix">
                 <div id="site-logo" class="clearfix">
                   <div id="site-log-inner">
-                    <a href="home.html" rel="home" class="main-logo">
+                    <a href="index.html" rel="home" class="main-logo">
                       <img
                         src="assets/img/logo-small.png"
                         alt="Autora"
@@ -85,7 +85,7 @@
                 <nav id="main-nav" class="main-nav">
                   <ul id="menu-primary-menu" class="menu">
                     <li class="menu-item menu-item-has-children">
-                      <a href="home.html">HOME</a>
+                      <a href="index.html">HOME</a>
                     </li>
                     <li
                       class="menu-item menu-item-has-children current-menu-item"
