--- a/index.html
+++ b/index.html
@@ -108,13 +108,10 @@
                       </ul>
                     </li>
                     <li class="menu-item menu-item-has-children">
-                      <a href="page-services.html">PRODUCTS & SERVICES </a>
+                      <a href="page-services.html">PRODUCTS </a>
                       <ul class="sub-menu">
                         <li class="menu-item">
                           <a href="page-services.html">PRODUCTS</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-services-detail.html">SERVICES</a>
                         </li>
                       </ul>
                     </li>
@@ -522,7 +519,9 @@
                           <div
                             class="themesflat-headings style-1 text-center clearfix"
                           >
-                            <h2 class="heading">YOUR BEST CHOOSE</h2>
+                            <h2 class="heading">
+                              #1 INDONESIA's LEADING MANUFACTURING COMPANY
+                            </h2>
                             <div class="sep has-icon width-125 clearfix">
                               <div class="sep-icon">
                                 <span
@@ -537,9 +536,8 @@
                               </div>
                             </div>
                             <p class="sub-heading">
-                              More than 500 projects completed in Autora - With
-                              over 25 years of combined experience, we have the
-                              knowledge to serve you.
+                              "Over X amount of projects with over X amount of
+                              years of technical brilliance"
                             </p>
                           </div>
                           <div
@@ -571,11 +569,6 @@
                                   <a href="#">BEST QUALITY</a>
                                 </h5>
                                 <div class="sep clearfix"></div>
-                                <p class="sub-heading">
-                                  Autora Construction Services are committed to
-                                  meeting the highest quality standards without
-                                  compromising our safety culture..
-                                </p>
                               </div>
                             </div>
                             <!-- /.themesflat-icon-box -->
@@ -604,11 +597,6 @@
                               <div class="text-wrap">
                                 <h5 class="heading"><a href="#">ON TIME</a></h5>
                                 <div class="sep clearfix"></div>
-                                <p class="sub-heading">
-                                  At our company, we respect the customer’s time
-                                  and schedule and always complete the projects
-                                  on timely fashion way.
-                                </p>
                               </div>
                             </div>
                             <!-- /.themesflat-icon-box -->
@@ -639,12 +627,35 @@
                                   <a href="#">EXPERIENCED</a>
                                 </h5>
                                 <div class="sep clearfix"></div>
-                                <p class="sub-heading">
-                                  As the saying goes practice makes perfect.
-                                  With our years of experience you can bet on us
-                                  to get the job done exactly to your
-                                  specifications.
-                                </p>
+                              </div>
+                            </div>
+                            <!-- /.themesflat-icon-box -->
+                          </div>
+                          <!-- /.themesflat-content-box -->
+                        </div>
+                        <div class="col-md-4">
+                          <div
+                            class="themesflat-spacer clearfix"
+                            data-desktop="0"
+                            data-mobile="0"
+                            data-smobile="35"
+                          ></div>
+                          <div
+                            class="themesflat-content-box clearfix"
+                            data-margin="0 5px 0 5px"
+                            data-mobilemargin="0 0 0 0"
+                          >
+                            <div
+                              class="themesflat-icon-box icon-top align-center has-width w95 circle light-bg accent-color style-1 clearfix"
+                            >
+                              <div class="icon-wrap">
+                                <i class="autora-icon-author"></i>
+                              </div>
+                              <div class="text-wrap">
+                                <h5 class="heading">
+                                  <a href="#">EXPERIENCED</a>
+                                </h5>
+                                <div class="sep clearfix"></div>
                               </div>
                             </div>
                             <!-- /.themesflat-icon-box -->
