--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
       href="assets/icon/apple-touch-icon-158-precomposed.png"
     />
 
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="assets/css/all.min.css"
+      id="colors"
+    />
+
     <!--[if lt IE 9]>
       <script src="javascript/html5shiv.js"></script>
       <script src="javascript/respond.min.js"></script>
@@ -552,7 +559,7 @@
                       <!-- /.row -->
 
                       <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div
                             class="themesflat-content-box clearfix"
                             data-margin="0 5px 0 5px"
@@ -566,7 +573,7 @@
                               </div>
                               <div class="text-wrap">
                                 <h5 class="heading">
-                                  <a href="#">BEST QUALITY</a>
+                                  <a href="#">HIGHEST QUALITY</a>
                                 </h5>
                                 <div class="sep clearfix"></div>
                               </div>
@@ -576,7 +583,7 @@
                           <!-- /.themesflat-content-box -->
                         </div>
                         <!-- /.col-md-4 -->
-                        <div class="col-md-4">
+                        <div class="col-md-3">
                           <div
                             class="themesflat-spacer clearfix"
                             data-desktop="0"
@@ -592,39 +599,11 @@
                               class="themesflat-icon-box icon-top align-center has-width w95 circle light-bg accent-color style-1 clearfix"
                             >
                               <div class="icon-wrap">
-                                <i class="autora-icon-time"></i>
-                              </div>
-                              <div class="text-wrap">
-                                <h5 class="heading"><a href="#">ON TIME</a></h5>
-                                <div class="sep clearfix"></div>
-                              </div>
-                            </div>
-                            <!-- /.themesflat-icon-box -->
-                          </div>
-                          <!-- /.themesflat-content-box -->
-                        </div>
-                        <!-- /.col-md-4 -->
-                        <div class="col-md-4">
-                          <div
-                            class="themesflat-spacer clearfix"
-                            data-desktop="0"
-                            data-mobile="0"
-                            data-smobile="35"
-                          ></div>
-                          <div
-                            class="themesflat-content-box clearfix"
-                            data-margin="0 5px 0 5px"
-                            data-mobilemargin="0 0 0 0"
-                          >
-                            <div
-                              class="themesflat-icon-box icon-top align-center has-width w95 circle light-bg accent-color style-1 clearfix"
-                            >
-                              <div class="icon-wrap">
-                                <i class="autora-icon-author"></i>
+                                <i class="fa-solid fa-earth-asia"></i>
                               </div>
                               <div class="text-wrap">
                                 <h5 class="heading">
-                                  <a href="#">EXPERIENCED</a>
+                                  <a href="#">INTERNATIONAL REPUTATION</a>
                                 </h5>
                                 <div class="sep clearfix"></div>
                               </div>
@@ -633,7 +612,37 @@
                           </div>
                           <!-- /.themesflat-content-box -->
                         </div>
-                        <div class="col-md-4">
+                        <!-- /.col-md-4 -->
+                        <div class="col-md-3">
+                          <div
+                            class="themesflat-spacer clearfix"
+                            data-desktop="0"
+                            data-mobile="0"
+                            data-smobile="35"
+                          ></div>
+                          <div
+                            class="themesflat-content-box clearfix"
+                            data-margin="0 5px 0 5px"
+                            data-mobilemargin="0 0 0 0"
+                          >
+                            <div
+                              class="themesflat-icon-box icon-top align-center has-width w95 circle light-bg accent-color style-1 clearfix"
+                            >
+                              <div class="icon-wrap">
+                                <i class="fa-solid fa-seedling"></i>
+                              </div>
+                              <div class="text-wrap">
+                                <h5 class="heading">
+                                  <a href="#">ENVIRONMENTALLY FRIENDLY</a>
+                                </h5>
+                                <div class="sep clearfix"></div>
+                              </div>
+                            </div>
+                            <!-- /.themesflat-icon-box -->
+                          </div>
+                          <!-- /.themesflat-content-box -->
+                        </div>
+                        <div class="col-md-3">
                           <div
                             class="themesflat-spacer clearfix"
                             data-desktop="0"
