--- a/page-services.html
+++ b/page-services.html
@@ -62,15 +62,16 @@
               <div class="wrap-inner clearfix">
                 <div id="site-logo" class="clearfix">
                   <div id="site-log-inner">
-                    <a href="index.html" rel="home" class="main-logo">
+                    <a href="home.html" rel="home" class="main-logo">
                       <img
-                        src="assets/img/logo-small.png"
+                        src="assets/img/pti_logo.jpg"
                         alt="Autora"
                         width="186"
                         height="39"
-                        data-retina="assets/img/logo-small@2x.png"
+                        data-retina="assets/img/pti_logo.jpg"
                         data-width="186"
                         data-height="39"
+                        style="width: 80px"
                       />
                     </a>
                   </div>
@@ -84,77 +85,25 @@
 
                 <nav id="main-nav" class="main-nav">
                   <ul id="menu-primary-menu" class="menu">
-                    <li class="menu-item menu-item-has-children">
-                      <a href="index.html">HOME</a>
-                    </li>
-                    <li class="menu-item menu-item-has-children">
-                      <a href="page-about.html">ABOUT US </a>
-                      <ul class="sub-menu">
-                        <li class="menu-item">
-                          <a href="page-about.html">ABOUT US</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-about-detail.html">ABOUT DETAIL</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-about-team.html">ABOUT TEAM</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-about-careers.html">ABOUT CAREERS</a>
-                        </li>
-                      </ul>
-                    </li>
                     <li
                       class="menu-item menu-item-has-children current-menu-item"
                     >
-                      <a href="page-services.html">PRODUCTS & SERVICES </a>
-                      <ul class="sub-menu">
-                        <li class="menu-item current-item">
-                          <a href="page-services.html">PRODUCTS</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-services-detail.html">SERVICES</a>
-                        </li>
-                      </ul>
+                      <a href="home.html">HOME</a>
+                    </li>
+                    <li class="menu-item menu-item-has-children">
+                      <a href="page-about.html">ABOUT US </a>
+                    </li>
+                    <li class="menu-item menu-item-has-children">
+                      <a href="page-services.html">PRODUCTS </a>
                     </li>
                     <li class="menu-item menu-item-has-children">
                       <a href="page-projects.html">PREVIOUS CLIENTS</a>
-                      <ul class="sub-menu">
-                        <li class="menu-item">
-                          <a href="page-projects.html">PROJECTS</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-projects-full.html"
-                            >PROJECTS FULL WIDTH</a
-                          >
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-project-detail.html">PROJECTS DETAIL</a>
-                        </li>
-                      </ul>
                     </li>
                     <li class="menu-item menu-item-has-children">
                       <a href="page-testimonial.html">CERTIFICATION</a>
-                      <ul class="sub-menu">
-                        <li class="menu-item">
-                          <a href="page-testimonial.html">PAGE TESTIMONIAL</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-pricing.html">PAGE PRICING</a>
-                        </li>
-                      </ul>
                     </li>
-
                     <li class="menu-item menu-item-has-children">
                       <a href="page-contact.html">CONTACT</a>
-                      <ul class="sub-menu right-sub-menu">
-                        <li class="menu-item">
-                          <a href="page-contact.html">CONTACT 1</a>
-                        </li>
-                        <li class="menu-item">
-                          <a href="page-contact-2.html">CONTACT 2</a>
-                        </li>
-                      </ul>
                     </li>
                   </ul>
                 </nav>
