first draft fin

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if IE
       ]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     /><![endif]-->
-    <title>Autora - Construction Business HTMl Template</title>
+    <title>PLASTIKAMA TEKNOLOGI INDUSTRY- ONE OF A KIND|</title>
 
     <meta name="author" content="themesflat.com" />
 
@@ -33,7 +33,7 @@
     />
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="assets/icon/favicon.png" />
+    <link rel="shortcut icon" href="assets/img/pti_logo.jpg" />
     <link
       rel="apple-touch-icon-precomposed"
       href="assets/icon/apple-touch-icon-158-precomposed.png"
