--- a/page-about.html
+++ b/page-about.html
@@ -33,7 +33,7 @@
     />
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="assets/icon/favicon.png" />
+    <link rel="shortcut icon" href="assets/img/pti_logo.jpg" />
     <link
       rel="apple-touch-icon-precomposed"
       href="assets/icon/apple-touch-icon-158-precomposed.png"
