--- a/page-testimonial.html
+++ b/page-testimonial.html
@@ -11,7 +11,7 @@
     <!--[if IE
       ]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     /><![endif]-->
-    <title>Autora | Consultant Autora HTML Templates</title>
+    <title>PLASTIKAMA TEKNOLOGI INDUSTRY- ONE OF A KIND|</title>
 
     <meta name="author" content="themesflat.com" />
 
@@ -33,7 +33,7 @@
     />
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="assets/icon/favicon.png" />
+    <link rel="shortcut icon" href="assets/img/pti_logo.jpg" />
     <link
       rel="apple-touch-icon-precomposed"
       href="assets/icon/apple-touch-icon-158-precomposed.png"
@@ -144,29 +144,46 @@
         <!-- End Featured Title -->
 
         <!-- Main Content -->
-        <div class="certifications">
-          <div class="cer-container1">
-            <div class="certification-img-box">
-              <img
-                class="certification-img"
-                src="./assets/img/partners/appreciation.JPG"
-              />
-            </div>
-
-            <div class="certification-img-box">
-              <img
-                class="certification-img"
-                src="./assets/img/partners/registration.JPG"
-              />
+        <div
+        class="themesflat-spacer clearfix"
+        data-desktop="60"
+        data-mobile="60"
+        data-smobile="60"
+      ></div>
+      <div class="container">
+        <div class="row justify-content-center mb-4">
+          <div class="col-md-6">
+            <div class="content-column-1">
+              <div class="certification-img-box">
+                <img class="certification-img" src="./assets/img/partners/appreciation.JPG" />
+              </div>
             </div>
           </div>
-          <div class="cer-container1">
-            <img
-              class="certification-img"
-              src="./assets/img/partners/ISO 9001 Logo Certification.jpg"
-            />
+          <div class="col-md-6">
+            <div class="content-column-2">
+              <div class="certification-img-box">
+                <img class="certification-img" src="./assets/img/partners/registration.JPG" />
+              </div>
+            </div>
           </div>
         </div>
+        <div class="row justify-content-center mb-4">
+          <div class="col-md-6">
+            <div class="content-column-2">
+              <div class="certification-img-box">
+                <img class="certification-img" src="./assets/img/partners/ISO 9001 Logo Certification.jpg" />
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6"></div>
+        </div>
+      </div>
+        <div
+                            class="themesflat-spacer clearfix"
+                            data-desktop="60"
+                            data-mobile="60"
+                            data-smobile="60"
+                          ></div>
         <!-- /#main-content -->
 
         <!-- Footer -->
