--- a/page-services.html
+++ b/page-services.html
@@ -11,7 +11,7 @@
     <!--[if IE
       ]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
     /><![endif]-->
-    <title>Autora - Construction Business HTMl Template</title>
+    <title>PLASTIKAMA TEKNOLOGI INDUSTRY- ONE OF A KIND|</title>
 
     <meta name="author" content="themesflat.com" />
 
@@ -33,7 +33,7 @@
     />
 
     <!-- Favicon and Touch Icons  -->
-    <link rel="shortcut icon" href="assets/icon/favicon.png" />
+    <link rel="shortcut icon" href="assets/img/pti_logo.jpg" />
     <link
       rel="apple-touch-icon-precomposed"
       href="assets/icon/apple-touch-icon-158-precomposed.png"
@@ -175,7 +175,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-1-370x215.jpg"
+                                        src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -209,7 +209,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-2-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -243,7 +243,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-3-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -277,7 +277,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-1-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -311,7 +311,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-2-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -345,7 +345,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-3-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -396,7 +396,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-4-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -430,7 +430,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-5-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -464,7 +464,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-6-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -497,7 +497,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-4-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -531,7 +531,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-5-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
@@ -565,7 +565,7 @@
                                   <div class="inner">
                                     <div class="thumb data-effect-item">
                                       <img
-                                        src="assets/img/imagebox/image-box-6-370x215.jpg"
+                                      src="assets/img/gallery/group.jpg"
                                         alt="Image"
                                       />
                                       <div
