--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             data-splitout="none"
                             data-responsive_offset="on"
                           >
-                            <a href="#" class="themesflat-button bg-accent big"
+                            <a href="page-contact.html" class="themesflat-button bg-accent big"
                               ><span>GET IN TOUCH</span></a
                             >
                           </div>
@@ -351,7 +351,7 @@
                             data-splitout="none"
                             data-responsive_offset="on"
                           >
-                            <a href="#" class="themesflat-button bg-accent big"
+                            <a href="page-contact.html" class="themesflat-button bg-accent big"
                               ><span>GET IN TOUCH</span></a
                             >
                           </div>
@@ -460,7 +460,7 @@
                             data-splitout="none"
                             data-responsive_offset="on"
                           >
-                            <a href="#" class="themesflat-button bg-accent big"
+                            <a href="page-contact.html" class="themesflat-button bg-accent big"
                               ><span>GET IN TOUCH</span></a
                             >
                           </div>
@@ -642,7 +642,7 @@
                             data-smobile="35"
                           ></div>
                           <div class="elm-button text-center">
-                            <a href="#" class="themesflat-button bg-accent"
+                            <a  href="page-about.html" class="themesflat-button bg-accent"
                               >ABOUT US</a
                             >
                           </div>
@@ -779,7 +779,7 @@
                               data-smobile="35"
                             ></div>
                             <div class="elm-button">
-                              <a href="#" class="themesflat-button bg-white"
+                              <a href="page-contact.html" class="themesflat-button bg-white"
                                 >GET IN TOUCH</a
                               >
                             </div>
@@ -949,7 +949,7 @@
                     <div class="bg-parallax-overlay overlay-black style4"></div>
                   </div>
                   <div class="elm-button text-center home-btns">
-                    <a href="#" class="themesflat-button bg-accent"
+                    <a href="page-services.html" class="themesflat-button bg-accent"
                       >ALL CLIENTS
                     </a>
                   </div>
@@ -968,7 +968,7 @@
                           <div
                             class="themesflat-headings style-1 text-center clearfix"
                           >
-                            <h2 class="heading text-white">FEATURED PROJECT</h2>
+                            <h2 class="heading text-white">FEATURED PRODUCT</h2>
                             <div
                               class="sep has-icon width-125 border-color-light clearfix"
                             >
@@ -1129,8 +1129,8 @@
                             data-smobile="35"
                           ></div>
                           <div class="elm-button text-center">
-                            <a href="#" class="themesflat-button bg-accent"
-                              >ALL PROJECTS
+                            <a href="page-projects.html" class="themesflat-button bg-accent"
+                              >ALL PRODUCTS
                             </a>
                           </div>
                           <div
