--- a/page-contact.html
+++ b/page-contact.html
@@ -299,8 +299,7 @@
                                       <div class="inner">
                                         <span class="fa fa-map-marker"></span>
                                         <span class="text"
-                                          >PO BOX 16122 COLLINS STREET WEST
-                                          VICTORIA, NEWYORK
+                                          >Jl. Gaharu No.10 B1 Blok F5 Cikarang Selatan, Bekasi, 17550
                                         </span>
                                       </div>
                                     </li>
@@ -309,7 +308,7 @@
                                       <div class="inner">
                                         <span class="fa fa-phone"></span>
                                         <span class="text"
-                                          >CALL US : (+61) 3 8376 6284</span
+                                          >CALL US : (+62)21-8990-4401<br>FAX : (+62)21-8991-1492</span
                                         >
                                       </div>
                                     </li>
@@ -318,7 +317,7 @@
                                       <div class="inner">
                                         <span class="fa fa-envelope"></span>
                                         <span class="text"
-                                          >EMAIL : SUPPORT@NICHE_THEME</span
+                                          >EMAIL : marketing@plastikatama.com</span
                                         >
                                       </div>
                                     </li>
@@ -333,29 +332,14 @@
                                       <div class="inner">
                                         <span class="fa fa-map-marker"></span>
                                         <span class="text"
-                                          >PO BOX 16122 COLLINS STREET WEST
-                                          VICTORIA, NEWYORK
+                                          > No.18 Kampung Pasir Randu, Jl. Raa Serang, Desa Sukasari, Cibarusah, Cikarang Selatan, Bekasi, 17550
                                         </span>
                                       </div>
                                     </li>
 
-                                    <li class="clearfix">
-                                      <div class="inner">
-                                        <span class="fa fa-phone"></span>
-                                        <span class="text"
-                                          >CALL US : (+61) 3 8376 6284</span
-                                        >
-                                      </div>
-                                    </li>
+                                    
 
-                                    <li class="clearfix">
-                                      <div class="inner">
-                                        <span class="fa fa-envelope"></span>
-                                        <span class="text"
-                                          >EMAIL : SUPPORT@THEMESFLAT.COM</span
-                                        >
-                                      </div>
-                                    </li>
+                                   
                                   </ul>
                                 </div>
                               </div>
