--- a/index.html
+++ b/index.html
@@ -850,7 +850,7 @@
                               <div class="counter-item">
                                 <div class="inner">
                                   <div class="text-wrap">
-                                    <img class="top-client-img" src="/assets/img/partners/example.png">
+                                    <img class="top-client-img" src="./assets/img/partners/example.png">
                                     <!-- <h3 class="heading margin-right-18">
                                       PROJECT COMPLETED
                                     </h3> -->
@@ -880,7 +880,7 @@
                               <div class="counter-item">
                                 <div class="inner">
                                   <div class="text-wrap">
-                                    <img class="top-client-img" src="/assets/img/partners/example.png">
+                                    <img class="top-client-img" src="./assets/img/partners/example.png">
                                     <!-- <h3 class="heading margin-right-6">
                                       AWARDS WON
                                     </h3> -->
@@ -910,7 +910,7 @@
                               <div class="counter-item">
                                 <div class="inner">
                                   <div class="text-wrap">
-                                    <img class="top-client-img" src="/assets/img/partners/example.png">
+                                    <img class="top-client-img" src="./assets/img/partners/example.png">
                                     <!-- <h3 class="heading margin-right-8">
                                       SATISFIED CLIENTS
                                     </h3> -->
@@ -968,7 +968,7 @@
                           <div
                             class="themesflat-headings style-1 text-center clearfix"
                           >
-                            <h2 class="heading text-white">FEATURED PRODUCT</h2>
+                            <h2 class="heading text-white">FEATURED PROJECTS</h2>
                             <div
                               class="sep has-icon width-125 border-color-light clearfix"
                             >
